2001-02-26  Ramiro Estrugo  <ramiro@eazel.com>

	* .cvsignore:
	* help/nautilus-user-manual/es/.cvsignore:
	* omf-install/.cvsignore:
	* test/.cvsignore:
	* user-guide/C/.cvsignore:
	Ignore generated files.
	
2001-02-26  Eskil Heyn Olsen  <eskil@eazel.com>

	sleepy reviewer: Robey Pointer  <robey@eazel.com>

	* components/services/install/lib/eazel-install-logic2.c:
	(check_no_two_packages_has_same_file), (install_packages):
	when adding extrapackges to main packageslist, check that we're
	not adding duplicates.
	
	* components/services/install/lib/eazel-package-system-types.c:
	(eazel_install_package_compare):
	remopved debug outpu

2001-02-26  Robey Pointer  <robey@eazel.com>

	reviewed by: Eskil Heyn Olsen <eskil@eazel.com>

	* components/services/install-view/callbacks.c:
	(nautilus_service_install_preflight_check):
	* components/services/install-view/forms.c: (add_padding_to_box),
	(generate_install_form), (make_query_box):
	* components/services/install-view/nautilus-service-install-view.c:
	* components/services/install-view/nautilus-service-install-view.h:

	Put the preflight query into a pane so it can be made scrollable
	if the list of packages gets too long.
	
	* nautilus-installer/src/installer.c: (eazel_install_progress),
	(eazel_download_progress), (install_failed),
	(eazel_install_preflight):
	* nautilus-installer/src/installer.h:

	Fix the progress bars to make sense.  The fact that they even
	looked like they were 90% working before is just a bizarre
	coincidence.

2001-02-26  Arik Devens  <arik@eazel.com>

	reviewed by: Maciej Stachowiak  <mjs@eazel.com>

	Fixed bug 7009, view as pkg lists inaccurate rpm filesize.
	
	* components/rpmview/nautilus-rpm-view.c:
	(nautilus_rpm_view_initialize): Changed Size to Installed Size to
	more accurately reflect the information we are attempting to
	convey.

2001-02-26  Dan Mueth  <dan@eazel.com>

	reviewed by: Tux

	Fixing bug: 6983 by changing "help:nautilus" to
	"help:nautilus-user-manual".
